--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,6 +83,18 @@
   font-weight: bold;
 }
 
+.award-text * {
+  margin: 0;
+  padding: 0;
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: .05em;
+}
+
+.award-text {
+  margin-top: -25px;
+}
+
 /* Bottom left text */
 .bottom-left {
   position: absolute;
