--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,7 @@
   left: 16px;
   float: left;
   margin-left: 1.5em;
+  /* margin-bottom: 50px; */
 }
 
 .home_title {
@@ -29,25 +30,26 @@
   padding: 0;
 }
 .home_subtitle {
-  margin-bottom: 200px;
+  margin-bottom: 180px;
 }
 .home_subtitle p {
-  font-size: 20px;
+  font-size: 18px;
   text-shadow: 2px 2px 12px white;
   line-height: 35px;
   margin: 0;
   padding: 0;
 }
 
+.plant-based-text {
+  margin-bottom: 50px;
+}
+
 /* Bottom left text */
 .bottom-left {
   position: absolute;
   bottom: 8px;
-  /* float: left; */
-  /* left: 16px; */
-  /* font-size: 15px; */
   margin-left: 1.8em;
-  padding-bottom: 10px;
+  padding-bottom: 12px;
 }
 
 .bottom-left a {
@@ -66,7 +68,7 @@
 
 .zero-waste-container {
   margin-top: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
 .zero-waste {
@@ -76,6 +78,40 @@
   letter-spacing: .25em;
   margin: 0;
   padding: 0;
+}
+
+.zero-waste-subtext {
+  /* margin:0; */
+  text-align: center;
+  /* box-shadow:         0 10px 5px -6px grey;
+  -webkit-box-shadow: 0 10px 5px -6px grey;
+  -moz-box-shadow:    0 10px 5px -6px grey; */
+}
+
+.box-shadow-top {
+  box-shadow:inset 0 -15px 5px -16px #111;
+}
+.box-shadow-bottom {
+  box-shadow:inset 0 15px 5px -16px #111;
+
+}
+
+.zero-waste-subtitle {
+  color: #617221;
+  font-weight: bold;
+  letter-spacing: .05em;
+  font-size: 25px;
+  /* text-align: center; */
+}
+
+.zero-waste-subtext p {
+  text-align: left;
+}
+
+.zero-waste-cell {
+  padding: 0 20px 0 20px;
+  display: inline-block;
+  text-align: left;
 }
 
 .delivered-weekly-image {
@@ -485,7 +521,7 @@ hr.four {
 .start_button {
   margin-top: 15px;
   color: white;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 2.5rem;
   font-size: 1.25rem;
   border-radius: 0.3rem;
 }
