--- a/client/src/App.css
+++ b/client/src/App.css
@@ -89,11 +89,14 @@
 }
 
 .box-shadow-top {
-  box-shadow:inset 0 -15px 5px -16px #111;
+  box-shadow:inset 0 -15px 10px -16px grey;
+  margin: auto;
+  width: 930px;
 }
 .box-shadow-bottom {
-  box-shadow:inset 0 15px 5px -16px #111;
-
+  box-shadow:inset 0 15px 10px -16px grey;
+  margin: auto;
+  width: 930px;
 }
 
 .zero-waste-subtitle {
@@ -106,6 +109,12 @@
 
 .zero-waste-subtext p {
   text-align: left;
+  /* margin-left: 12px; */
+  font-size: 16px;
+}
+
+.zero-waste-subtext h4 {
+  /* margin-left: 12px; */
 }
 
 .zero-waste-cell {
