Update footer styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -592,3 +592,10 @@ hr.four {
   font-weight: 500;
   font-size: 25px;
 }
+
+#footer-margin-padding {
+  margin-top: 0;
+  margin-bottom: 5px;
+  padding-top: 0;
+  padding-bottom: 0;
+}
