Add carousel hover overlay effect and text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -206,7 +206,7 @@
 }
 
 .fresh-menu-subtitle-container {
-  margin: 0 0 20px 0;
+  margin: 30px 0 40px 0;
 }
 
 .fresh-menu-subtitle {
@@ -218,8 +218,49 @@
 .menu-carousel-img {
   width: 290px;
   height: 290px;
-  padding: 10px;
+  /* padding: 4px; */
   transition: .2s;
+}
+
+.menu-carousel-img-container {
+  position: relative;
+  padding: 0;
+  width: 290px;
+  display: block;
+  cursor: pointer;
+  overflow: hidden;
+}
+.content {
+  opacity: 0;
+  font-size: 25px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #fff;
+  background-color: rgba(200, 200, 200, 0.5);
+  width: 290px;
+  height: 290px;
+  -webkit-transition: all 400ms ease-out;
+  -moz-transition: all 400ms ease-out;
+  -o-transition: all 400ms ease-out;
+  -ms-transition: all 400ms ease-out;
+  transition: all 400ms ease-out;
+  text-align: center;
+}
+.menu-carousel-img-container .content:hover {
+  opacity: 1;
+}
+.menu-carousel-img-container .content .text {
+  height: 0;
+  opacity: 1;
+  transition-delay: 0s;
+  transition-duration: 0.05s;
+  padding-top: 120px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.menu-carousel-img-container .content:hover .text {
+  opacity: 1;
 }
 
 .menu-carousel-img:hover {
