--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,7 +34,7 @@
 }
 .home_subtitle p {
   font-size: 18px;
-  text-shadow: 2px 2px 12px white;
+  /* text-shadow: 2px 2px 12px white; */
   line-height: 35px;
   margin: 0;
   padding: 0;
@@ -97,6 +97,7 @@
   box-shadow:inset 0 15px 10px -16px grey;
   margin: auto;
   width: 930px;
+  padding-bottom: 25px;
 }
 
 .zero-waste-subtitle {
@@ -390,8 +391,8 @@ br {
 /* button */
 
 .btn1 {
-  -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0) !important;
-  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0) !important;
+  /* -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0) !important;
+  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0) !important; */
   padding: 0.1rem 2rem;
   text-transform: uppercase;
   letter-spacing: 0;
@@ -417,11 +418,11 @@ br {
 .subscribe-btn {
   background-color: #467844;
   color: white !important;
-  padding: 0.2rem .5rem;
+  padding: 6px .5rem;
   text-transform: uppercase;
   letter-spacing: 0;
   border: 0;
-  line-height: 2;
+  line-height: 2.5;
   border-radius: 4px;
   transition: .2s;
 }
