--- a/InfiniteMeals/InfiniteMeals/ViewModel/MealSelect/AddOnChoices.xaml
+++ b/InfiniteMeals/InfiniteMeals/ViewModel/MealSelect/AddOnChoices.xaml
@@ -12,8 +12,11 @@
                              <Grid.RowDefinitions>
                             <RowDefinition Height="*" />
                             <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
@@ -21,8 +24,15 @@
                         </Grid.ColumnDefinitions>
                             <Label Text="{Binding name}"></Label>
                             <Label Text="{Binding price}"></Label>
+                            <Label Text="{Binding qty}"></Label>
                             <Image Source="{Binding imageUrl}" Grid.RowSpan="2"></Image>
-                            <ImageButton Source="{Binding infoUrl}"></ImageButton>
+                            <!--
+                            <ImageButton
+                                Source="{Binding infoUrl}"
+                                BindingContext="{Binding Source={x:Reference lstView}, Path=BindingContext}"
+                                Command="{Binding onInfoCommand}"
+                                CommandParameter="{Binding Source={x:Reference Meal}, Path=BindingContext}"></ImageButton>
+                            -->
                         </Grid>
                     </ViewCell>
                 </DataTemplate>
@@ -30,125 +40,3 @@
 		</ListView>
 	</ContentPage.Content>
 </ContentPage>
-<!--
-    <StackLayout>
-        <Label Text="Add Ons" FontSize ="24" Margin="20" TextColor="Black" HorizontalOptions="Center"/>
-        <ListView ItemsSource="{Binding AddOn}"
-          HasUnevenRows="true"
-          Margin="20"
-          ItemSelected="OnListViewItemSelected"
-          ItemTapped="OnListViewItemTapped">
-        <ListView.ItemTemplate>
-        <DataTemplate>
-            <ViewCell>
-                <Grid Padding="10">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Image Grid.RowSpan="1"
-                           Source="{Binding imageUrl}"
-                           Aspect="AspectFill"
-                           HeightRequest="60"
-                           WidthRequest="60" />
-                    <Label Grid.Column="1"
-                           Text="{Binding name}"
-                           FontAttributes="Bold"/>
-                    <Label Grid.Column="1"
-                           Grid.Row="1"
-                           Text="{Binding price}"
-                           FontAttributes="Bold"/>
-                    <ImageButton Grid.Column="0"
-                           Grid.Row="1"
-                           Source="{Binding infoUrl}"
-                           Clicked="OnInfoClicked"
-                           Aspect="AspectFill"
-                           HorizontalOptions="Center"
-                           VerticalOptions="CenterAndExpand"
-                           HeightRequest="20"
-                           WidthRequest="20"/>
-                     <Stepper x:Name="_stepper"
-                              Grid.Column="2"
-                              Grid.Row="1"
-                             Value="0"
-                             Maximum="10"
-                             Increment="1"
-                              />
-                    <Label Grid.Column="2"
-                           Grid.Row="0"
-                           Text="{Binding Source={x:Reference _stepper}, Path=Value, StringFormat='Quantity: {0:F0}'}"
-                           HorizontalOptions="Center"
-                           VerticalOptions="CenterAndExpand" />
-                    </Grid>
-                 </ViewCell>
-             </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-
-        <Label Text="Add On Meals" FontSize ="24" Margin="20" TextColor="Black" HorizontalOptions="Center"/>
-
-        <ListView ItemsSource="{Binding MoreMeals}"
-          HasUnevenRows="true"
-          Margin="20"
-          ItemSelected="OnListViewItemSelected"
-          ItemTapped="OnListViewItemTapped">
-        <ListView.ItemTemplate>
-        <DataTemplate>
-            <ViewCell>
-                <Grid Padding="10">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-
-                    <Image Grid.RowSpan="1"
-                           Source="{Binding imageUrl}"
-                           Aspect="AspectFill"
-                           HeightRequest="60"
-                           WidthRequest="60" />
-
-                    <Label Grid.Column="1"
-                           Text="{Binding name}"
-                           FontAttributes="Bold"/>
-                    <Label Grid.Column="1"
-                           Grid.Row="1"
-                           Text="{Binding price}"
-                           FontAttributes="Bold"/>
-
-                    <ImageButton Grid.Column="0"
-                           Grid.Row="1"
-                           Source="{Binding infoUrl}"
-                           Aspect="AspectFill"
-                           Clicked="OnInfoClicked"
-                           HorizontalOptions="Center"
-                           VerticalOptions="CenterAndExpand"
-                           HeightRequest="20"
-                           WidthRequest="20"/>
-                     <Stepper x:Name="_stepper"
-                              Grid.Column="2"
-                              Grid.Row="1"
-                             Value="0"
-                             Maximum="10"
-                             Increment="1"
-                              />
-                    <Label Grid.Column="2"
-                           Grid.Row="0"
-                           Text="{Binding Source={x:Reference _stepper}, Path=Value, StringFormat='Quantity: {0:F0}'}"
-                           HorizontalOptions="Center"
-                           VerticalOptions="CenterAndExpand" />
-                    </Grid>
-                 </ViewCell>
-             </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-    </StackLayout>
-</ContentPage>
-   -->
